--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,3 +1,13 @@
+.prizes-container {
+    width: 800px;
+    margin: auto;
+    margin-top: 20px;
+    padding: 18px;
+    border-color: #ca0909;
+    border-style: solid;
+    border-radius: 24px;
+}
+
 .value-holder {
     display: inline-block;
     width: 33%;
@@ -11,10 +21,22 @@
 .luck-btn {
     display: block;
     margin: auto;
+    margin-top: 12px;
     width: 150px;
     height: 50px;
     background-color: #017898;
     color: white;
+    cursor: pointer;
     font-size: 18px;
     border-radius: 12px;
+}
+
+.luck-btn:disabled {
+    background-color: #dddddd;
+}
+
+.prize-img {
+    display: block;
+    margin: auto;
+    width: 200px;
 }
